--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -35,6 +35,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:23.1.1'
 }
 
 def siteUrl = 'https://github.com/AlanCheen/Utils'      // 项目的主页
