--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'com.jfrog.bintray'
 
 
 // 这个version是区分library版本的，因此当我们需要更新library时记得修改这个version
-version = "0.1.0"
+version = "0.1.2"
 
 
 android {
@@ -17,7 +17,7 @@ android {
 
 
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.0"
 
     defaultConfig {
         minSdkVersion 11
@@ -31,10 +31,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        abortOnError false
+    }
+
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
 }
 
